support compile with jdk 17